# arenic_bevy

./: Cargo.toml  README.md  index.html
assets/: player_class_data.json
src/: abilities.rs  arena_components.rs  arenas.rs  cameras.rs  character_components.rs  characters.rs  constants.rs  events.rs  global_chat.rs  highlight_rect.rs  hud.rs  huds.rs  interactions.rs  intro.rs  lib.rs  main.rs  metadata.rs  names.rs  scenes.rs  shared_traits.rs  state.rs  tiles.rs  title.rs
src/abilities/: hunter.rs
src/arenas/: components.rs  mod.rs  setup_scene.rs  spawn_arenas.rs
src/arenas_old/: setup_scene.rs  spawn_arenas.rs
src/local_storage/: mod.rs
src/test_scenes/: highlight_rect.rs  mod.rs
