[package]
name = "arenic_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features=["Window", "Storage"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = "thin"